examples/test/testpolicy19426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19426
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key23: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value4
          key17: value9
      podSelector:
        matchLabels:
          key32: value5
          key43: value25
